plugins {
  id 'org.springframework.boot' version '3.1.4'
  id 'com.diffplug.spotless' version '6.21.0'
  id 'com.github.spotbugs' version '5.1.3'
  id 'java'
  id 'application'
}

application {
  mainClass = 'org.ogolem.general.MainOgolem'
  applicationDefaultJvmArgs = ["--enable-preview", "--add-modules=jdk.incubator.vector"]
  version = 'snapshot'
}

repositories {
 flatDir { dirs 'libs'}
 mavenCentral()
}

dependencies {
  implementation name: 'atomdroiduff-4.0.0'
  implementation name: 'corrmd'
  implementation name: 'evbqmdff'
  implementation name: 'lionbench'
  implementation name: 'scaTTM3F'
  implementation name: 'skalevala'
  implementation 'org.apache.commons:commons-math3:3.6.1'
  implementation 'org.ejml:ejml-all:0.43'
  implementation 'com.github.fommil.netlib:native_ref-java:1.1'
  implementation 'org.jgrapht:jgrapht-core:1.3.1'
  implementation 'org.jgrapht:jgrapht-ext:1.3.1'
  implementation 'org.jgrapht:jgrapht-io:1.3.1'
  implementation 'org.scala-lang:scala3-library_3:3.3.0'
  implementation 'org.slf4j:slf4j-api:2.0.9'
  implementation 'org.slf4j:slf4j-simple:2.0.9'
  testImplementation(
    'org.junit.jupiter:junit-jupiter-api:5.10.0'
  )
  testRuntimeOnly (
    'org.junit.jupiter:junit-jupiter-engine:5.10.0',
  )
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

sourceSets {
  main {
    java {
      srcDirs = ['src']
    }
  }

  test {
    java {
      srcDirs = ['tests']
    }
  }
}

compileJava {
  options.warnings = true
  options.deprecation = true
  options.debug = true
  options.compilerArgs += ["--enable-preview"]
  options.compilerArgs += ["--add-modules=jdk.incubator.vector"]
}

test {
  useJUnitPlatform()
  // branches != production lack implementation of NUMAL algorithms
  exclude 'org/ogolem/locopt/FleminLocOptTest*'
  exclude 'org/ogolem/locopt/PraxisLocOptTest*'
  exclude 'org/ogolem/locopt/RNK1MinLocOptTest*'
  jvmArgs '--enable-preview', '--add-modules=jdk.incubator.vector'
}

spotless {
  ratchetFrom '00fb668'
  java {
    googleJavaFormat()
  }
}

configurations.named('spotbugs').configure {
  resolutionStrategy.eachDependency { DependencyResolveDetails details ->
       if (details.requested.group == 'org.ow2.asm') {
            details.useVersion '9.5'
            details.because "Asm 9.5 is required for JDK 21 support"
      }
  }
}

spotbugs {
  spotbugsTest.enabled = false
  ignoreFailures = false
  effort = 'more'
  baselineFile = file("baseline.xml")
}

spotbugsMain {
  reports {
      xml{
       enabled = true
      }
    html {
     enabled = true
      stylesheet = 'fancy-hist.xsl'
    }
  }
}
